updated index.html, added banner

--- a/index.html
+++ b/index.html
@@ -1,7 +1,46 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><!-- InstanceBegin template="/Templates/template.dwt.cfm" codeOutsideHTMLIsLocked="false" -->
+<head>
+	<title>Red Skeeter Technologies</title> 
+	<meta name="Description" content="Web and spatial database application development services." />
+	<meta name="Keywords" content="Web, database application development, GIS, Geographic Information Systems, web map, cartography, 
+		sql server, .net, visual basic, wisconsin, open source, website, web site, small business" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<link rel="stylesheet" type="text/css" href="style.css" />    
+</head>
 <body>
-<h1>Red Skeeter</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<div id="container" style="width:100%">
+	
+	<!-- header -->
+	<div id="header" style="background-color:white;">
+		<h1 style="margin-bottom:0;">
+			<img src="RedSkeeterBanner.png" alt="" border="0" width="400" height="100" />
+		</h1>
+	</div>
+	
+	<!-- menu -->
+	<!-- <div id="menu" style="background-color:white;height:200px;width:100px;float:left;">
+		
+	</div> -->
+	
+	<!-- content -->
+	<div id="content" style="background-color:white;height:200px;width:100%;float:left;">
+		<p>Professional technological services in northern Wisconsin:</p>
+		
+		<p><a href="http://www.redskeeter.com">RedSkeeter.com</a></p>
+		<p><a href="https://github.com/RedSkeeter">GitHub.com/RedSkeeter</a></p>
+		
+		<p>
+			Contact: <a href="mailto:skeeter@redskeeter.com">skeeter@redskeeter.com</a>
+		</p>
+	</div>
+	
+	<!-- footer -->
+	<div id="footer" style="background-color:white; color: gray; font-size: x-small; text-align:center; font-style: italic;">
+		Copyright Â© RedSkeeter.com, 2013
+	</div>
+
+</div>
 </body>
-</html>
+</html> 
