--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	
 	<!-- footer -->
 	<div id="footer" style="background-color:white; color: gray; font-size: x-small; text-align:center; font-style: italic;">
-		Copyright Â© RedSkeeter.com, 2013
+		Copyright © RedSkeeter.com, 2013
 	</div>
 
 </div>
