--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 	<div id="content" style="background-color:white;height:200px;width:100%;float:left;">
 		<p>Professional technological services in northern Wisconsin:</p>
 		
-		<p><a href="http://www.redskeeter.com">RedSkeeter.com</a></p>
+		
 		<p><a href="https://github.com/RedSkeeter">GitHub.com/RedSkeeter</a></p>
 		
 		<p>
-			Contact: <a href="mailto:skeeter@redskeeter.com">skeeter@redskeeter.com</a>
+			Contact: <a href="mailto:hexagenia@hotmail.com">hexagenia@hotmail.com</a>
 		</p>
 	</div>
 	
 	<!-- footer -->
 	<div id="footer" style="background-color:white; color: gray; font-size: x-small; text-align:center; font-style: italic;">
-		Copyright © RedSkeeter.com, 2013
+		Copyright © RedSkeeter.com, 2015
 	</div>
 
 </div>
